--- a/webpages/css/agency.css
+++ b/webpages/css/agency.css
@@ -167,7 +167,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/naturalLand.jpg");
+  background-image: url("../img/landscape.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
